Source/WebCore/rendering/RenderBlockFlow.h
@@ -216,6 +216,7 @@ public:
         bool discardMargin() const { return m_discardMargin; }
         LayoutUnit margin() const { return m_positiveMargin - m_negativeMargin; }
     };
+    LayoutUnit marginOffsetForSelfCollapsingBlock();
 
     void layoutBlockChild(RenderBox& child, MarginInfo&, LayoutUnit& previousFloatLogicalBottom, LayoutUnit& maxFloatLogicalBottom);
     void adjustPositionedBlock(RenderBox& child, const MarginInfo&);
